--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-around;
+  padding: 8px;
 }
 
 .profile-image {
@@ -26,7 +29,7 @@ body {
   color: rebeccapurple;
   font-size: 32px;
   font-weight: 900;
-  font-style: italic;
+font-style:italic;
 }
 
 button {
@@ -41,8 +44,19 @@ a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+
 }
 
 ul {
   list-style-type: none;
+  display:flex;
+  margin:0px;
+  padding:0px;
+  gap:16px;
+}
+
+.left .right {
+  display: flex;
+  align-items: center;
+  gap:16px;
 }
